Fixed the references.

--- a/spec/sdshare.html
+++ b/spec/sdshare.html
@@ -23,11 +23,19 @@
     <h2>2. Normative References</h2>
     <p>The following references list works upon which this protocol is dependent.</p>
     <ul>
-        <li>HTTP: RFC 2616 HTTP 1.1. Revision: 1.8. September 2004.</li>
-        <li>Atom: RFC 4287 The Atom Syndication Format. December 2005.</li>
-        <li>RDF: Resource Description Framework (RDF): Concepts and Abstract Syntax. February 2004</li>
-        <li>NTriples: add reference</li>
-        <li>RDFXml: add reference</li>
+        <li>HTTP: <a href="http://www.ietf.org/rfc/rfc2616.txt">RFC</a>,
+            2616 HTTP 1.1. September 2004.</li>
+        <li>Atom: <a href="http://www.ietf.org/rfc/rfc4287.txt">RFC  4287</a>,
+            The Atom Syndication Format. December 2005.</li>
+        <li>RDF: <a href="http://www.w3.org/TR/rdf-concepts/">Resource
+            Description Framework (RDF):
+            Concepts and Abstract Syntax</a>. February 2004</li>
+        <li>NTriples: <a href="http://www.w3.org/TR/rdf-testcases/#ntriples"
+           >RDF Test Cases</a>, W3C Recommendation, 10 February 2004</li>
+        <li>RDFXml: <a href="http://www.w3.org/TR/REC-rdf-syntax/">RDF/XML
+            Syntax Specification (Revised)</a>, W3C Recommendation,
+            10 February 2004
+           </li>
     </ul>
   </div>
 
