fixed update algorithms

--- a/spec/sdshare.html
+++ b/spec/sdshare.html
@@ -49,6 +49,7 @@ pre {
     <div class="date">Date: 2012-02-17</div>
     <div class="author">Author: Graham Moore (gra@brightstardb.com, @gra_moore)</div>
     <div class="author">Author: Lars Marius Garshol</div>
+    <div class="link">This document http://www.sdshare.org/spec/sdshare-v1_0.html</div>
   </div>
 
   <div class="section">
