Now final draft.

--- a/spec/sdshare.html
+++ b/spec/sdshare.html
@@ -48,7 +48,7 @@ dt {
 <body>
   <div class="header">
     <h1 class="title">SDShare - A Protocol for the Syndication of Resource Descriptions</h1>
-    <div class="version">Version 1.0 Draft</div>
+    <div class="version">Version 1.0 Final Draft</div>
     <div class="date">Date: 2012-07-10</div>
     <div class="author">Author: Graham Moore (gra@brightstardb.com,
       <a href="http://twitter.com/gra_moore">@gra_moore</a>)</div>
