--- a/spec/sdshare.html
+++ b/spec/sdshare.html
@@ -48,14 +48,14 @@ dt {
 <body>
   <div class="header">
     <h1 class="title">SDShare - A Protocol for the Syndication of Resource Descriptions</h1>
-    <div class="version">Version 1.0 Final Draft</div>
-    <div class="date">Date: 2012-07-10</div>
-    <div class="author">Author: Graham Moore (gra@brightstardb.com,
+    <div class="version"><b>Version 1.0 Final Draft</b></div>
+    <div class="date"><b>Date:</b> 2012-07-10</div>
+    <div class="author"><b>Author:</b> Graham Moore (gra@brightstardb.com,
       <a href="http://twitter.com/gra_moore">@gra_moore</a>)</div>
-    <div class="author">Author: Lars Marius Garshol
+    <div class="author"><b>Author:</b> Lars Marius Garshol
     (larsga@garshol.priv.no,
       <a href="http://twitter.com/larsga">@larsga</a>)</div>
-    <div class="link">This document:
+    <div class="link"><b>This document:</b>
       http://www.sdshare.org/spec/sdshare-20120710.html</div>
   </div>
 
@@ -67,7 +67,7 @@ SDShare is a protocol for the syndication of resource descriptions. It
 defines how a RESTful service can publish a series of feeds that list
 snapshots and changes to collections of resources. This protocol also
 defines how a client should process those feeds and the linked
-resource descriptions so that a local store is in sync.
+resource descriptions so that a local store can be kept in sync.
 </p>    
 </div>
 
@@ -106,17 +106,11 @@ resource descriptions so that a local store is in sync.
 <div class="section">
 <h2>Introduction</h2>
 
-<p>RDF provides a very flexible data model that allows data of any
-form to be represented. The existing RDF family of standards define
-how to serialise the model, how to query the model (SPARQL) and how to
-update the model (SPARQL Update). However, there are no protocols that
-define how a machine can both expose and consume RDF in a system of
-interconnected nodes. A classic use case for this requirement is where
-one RDF server contains a collection of master data and another RDF
-system wishes to use that data. The master data will change over
-time. This protocol defines how the master data server can publish the
-changes to the resources it manages and how a client can consume them
-to ensure it is in sync.</p>
+<p>This specification describes how one RDF system can maintain a
+local copy of master data contained in another RDF system. The master
+data will change over time. This protocol defines how the master data
+server can publish the changes to the resources it manages and how a
+client can consume them to ensure it is in sync.</p>
 
 <p>An SDShare server SHOULD publish the following hierarchy of Atom
 feeds to expose one or more collection(s) of resource descriptions:</p>
@@ -129,9 +123,8 @@ feeds to expose one or more collection(s) of resource descriptions:</p>
   corresponding fragments feed.</li>
   <li>A snapshots feed for each collection. Each snapshot represents
   the state of a collection at point of time.</li>
-  <li>A resource update feed for each collection. Each feed entry
-  exists to reflect that the referenced resource has been
-  updated. </li>
+  <li>A fragment feed for each collection. Each feed entry exists to
+  reflect that the referenced resource has been updated. </li>
 </ul>
 
 <p>
@@ -144,14 +137,6 @@ collection. This feed lists the resources whose state has changed in
 the underlying resource collection. A client can retrieve the RDF for
 a updated resource and update its local collection.</p>
 
-<p class="note">NOTE: the notion of a client and server is solely
-defined by the responsibilities of each. Thus a given machine can act
-both as client and server (peer-to-peer scenario) or restrict itself
-to exactly one of the roles (publish-subscribe scenario).</p>
-
-<p>The protocol provides no provision against malicious or broken
-servers. It requires the client to trust all upstream servers.</p>
-
 <p>The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 document are to be interpreted as described in RFC 2119.</p>
@@ -161,7 +146,7 @@ document are to be interpreted as described in RFC 2119.</p>
 <h2 class="title">Conceptual Model</h2>
 
 <p>A <dfn>server</dfn> is a node which exposes feeds so that other
-nodes can observe and retrieve the state of the data being managed by
+nodes can observe and retrieve the state of the data being exposed by
 the server.
 
 <p>A <dfn>client</dfn> is a node which subscribes to one or more
@@ -169,9 +154,9 @@ feeds and implements the update semantics defined in this
 protocol. It is possible for the same node to be both a server and a
 client at the same time.</p>
 
-<p>An SDshare server contains a set of collections.
+<p>An SDShare server exposes a set of collections.
 A <dfn>collection</dfn> is a coherent data set, defined by the server
-in any way it sees fit. When exposing an RDF database via SDshare, a
+in any way it sees fit. When exposing an RDF data store via SDShare, a
 natural set of collections to use is to let each graph be a
 collection, but any set of collections is allowed.</p>
 
