--- a/spec/sdshare.html
+++ b/spec/sdshare.html
@@ -580,7 +580,7 @@ determined by the client.</p>
 
 <ul>
   <li>Follow the fragment generation algorithm in section 5.1.5 for R
-  in G, and call the resulting set of statements S'</li>
+  in G, and call the resulting set of statements S'.</li>
   <li>Delete all statements in S' from G.</li>
   <li>Insert all statements in S into G.</li>
 </ul>
